Update "Click Me"

--- a/src/pages/ja/core-concepts/astro-components.mdx
+++ b/src/pages/ja/core-concepts/astro-components.mdx
@@ -165,7 +165,7 @@ function handleClick () {
 ---
 // do-this-instead.astro
 ---
-<button id="button">Click Me</button>
+<button id="button">クリックしてください</button>
 <script>
   function handleClick () {
     console.log("ボタンがクリックされました！");
