i18n(ja): Update getting-started.mdx

--- a/src/pages/ja/getting-started.mdx
+++ b/src/pages/ja/getting-started.mdx
@@ -98,7 +98,7 @@ Astroサイトの主要なコンセプトとパターンの例をご覧くださ
 💬 `#showcase` チャンネルであなたの作ったものをシェアする。
 
 
-## もっと詳しく
+## 新着情報
 
 [Astroブログ](https://astro.build/blog/)
 
