Apply minor code review fixes

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -1,18 +1,18 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Endpunkte
-description: Erfahre wie du Endpunkte erstellen kannst, die jegliche Form von Daten bereitstellen
+description: Erfahre, wie du Endpunkte erstellen kannst, die jegliche Form von Daten bereitstellen.
 ---
 
-Astro lässt Dich unterschiedliche projektspezifische Endpunkte erstellen, die jegliche Form von Daten bereitstellen können. Du kannst sie verwenden um Bilder zu generieren, ein RSS-Dokument bereitzustellen oder sie als API-Route verwenden um eine komplette API für Deine Seite bereitzustellen.
+Mit Astro kannst du eigene projektspezifische Endpunkte erstellen, die jegliche Form von Daten bereitstellen können. Du kannst damit Bilder generieren, ein RSS-Dokument bereitstellen oder sie als API-Route verwenden, um eine komplette API für deine Seite zu erstellen.
 
-In statisch generierten Seiten werden die projektspezifischen Endpunkte zum Erstellungszeitpunkt abgerufen. Wenn du den [SSR](/de/guides/server-side-rendering/)-Modus verwendest, verhalten sich die projektspezifischen Endpunkte wie "echte" API-Endpunkte, die bei jeder Anfrage ausgeführt werden. Statische und SSR-Endpunkte werden auf ähnliche Weise definiert, aber SSR-Endpunkte bieten mehr Optionen.
+Auf statisch generierten Websites werden projektspezifische Endpunkte zum Erstellungszeitpunkt ausgeführt, um statische Dateien zu erzeugen. Wenn du hingegen den optionalen [SSR](/de/guides/server-side-rendering/)-Modus aktivierst, verwandeln projektspezifische Endpunkte sich in API-Endpunkte, die in Echtzeit zur Behandlung jeder eingehenden Anfrage ausgeführt werden. Statische und SSR-Endpunkte werden auf ähnliche Weise definiert, aber SSR-Endpunkte bieten mehr Optionen.
 
 ## Endpunkte für statische Dateien
 
-Um einen Endpunkt zu erstellen, füge eine `.js` oder `.ts`-Datei dem `/pages`-Verzeichnis hinzu. Die Erweiterung `.js` oder `.ts` wird während des Erstellungsprozesses entfernt, so dass der Dateiname die Dateiendung der Daten, die man erzeugen möchte, enthalten sollte. So erzeugt `src/pages/data.json.ts` zum Beispiel den Endpunkt `/data.json`.
+Um einen Endpunkt zu erstellen, füge eine Datei mit der Endung `.js` oder `.ts` dem `/pages`-Verzeichnis hinzu. Da die Erweiterung `.js` oder `.ts` während des Erstellungsprozesses entfernt wird, sollte der Dateiname zusätzlich eine Dateiendung enthalten, die zum Format der ausgegebenen Daten passt. So erzeugt z.B. die Datei `src/pages/data.json.ts` den Endpunkt `/data.json`.
 
-Endpunkte exportieren eine `get`-Funktion (optional auch `async`), welche ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt. Die Inhalte sind ähnlich zur globalen `Astro`-Variable. Die Funktion gibt ein Dokument mit `body`-Objekt zurück, welches Astro zum Erstellungszeitpunkt aufruft. Die Inhalte des Dokuments werden dann zur Erstellung der Datei genutzt.
+Endpunkte exportieren eine `get`-Funktion (optional `async`), welche ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt, dessen Inhalte ähnlich zur globalen `Astro`-Variable sind. Ihr Rückgabewert ist ein Objekt mit einer `body`-Eigenschaft. Astro ruft diese Funktion zum Erstellungszeitpunkt auf und verwendet den Inhalt der `body`-Eigenschaft, um die Ausgabedatei zu erzeugen.
 
 ```ts
 // Beispiel: src/pages/builtwith.json.ts
@@ -27,8 +27,7 @@ export async function get({params, request}) {
 }
 ```
 
-Das Rückgabe-Objekt kann auch eine `encoding`-Eigenschaft enthalten. Es kann jede gültige [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) sein, welches von der Node.js' `fs.writeFile`-Methode unterstützt wird. Um zum Beispiel ein binäres PNG-Bild zu erzeugen:
-
+Das Rückgabe-Objekt kann auch eine `encoding`-Eigenschaft enthalten. Sie kann jedes gültige [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) enthalten, welches von der Node.js-Methode `fs.writeFile` unterstützt wird. Hier ein Beispiel, wie du ein binäres PNG-Bild erzeugen kannst:
 
 ```ts title="src/pages/astro-logo.png.ts" {6}
 export async function get({ params, request }) {
@@ -41,7 +40,7 @@ export async function get({ params, request }) {
 }
 ```
 
-Du kannst deine Endpunkt-Funktion auch mit dem `APIRoute` Type typisieren:
+Du kannst deine Endpunkt-Funktion auch mit dem `APIRoute`-Type typisieren:
 
 ```ts
 import type { APIRoute } from 'astro';
@@ -52,7 +51,7 @@ export const get: APIRoute = async function get ({params, request}) {
 
 ## `params` und dynamische Routen
 
-Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne deine Datei mit einem Parameternamen, eingeschlossen in eckige Klammern und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
+Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne dazu deine Datei mit einem Parameternamen, der in eckige Klammern eingeschlossen ist, und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
 
 ```ts title="src/pages/[id].json.ts"
 import type { APIRoute } from 'astro';
@@ -77,7 +76,7 @@ export function getStaticPaths () {
 }
 ```
 
-Dies generiert drei JSON-Endpunkte zum Bereitstellungszeitpunkt: `/api/1.json`, `/api/2.json`, `/api/3.json`. Dynamisches Routing funktioniert genauso wie es bei den Seiten funktioniert, aber da der Endpunkt eine Funktion ist und keine Komponente werden [props](/de/reference/api-reference/#data-passing-with-props) nicht unterstützt.
+Dies generiert drei JSON-Endpunkte zum Erstellungszeitpunkt: `/api/1.json`, `/api/2.json`, `/api/3.json`. Dynamisches Routing funktioniert bei Endpunkten genau wie bei normalen Seiten, aber da der Endpunkt eine Funktion statt einer Komponente ist, werden [props](/de/reference/api-reference/#data-passing-with-props) nicht unterstützt.
 
 ### `request`
 
@@ -95,17 +94,17 @@ export const get: APIRoute = ({ params, request }) => {
 }
 ```
 
-## Server Endpunkte (API-Routen)
-Alles was bei den Endpunkten für statische Dateien beschrieben wurde, kann auch im SSR-Modus verwendet werden: Dateien können eine `get`-Funktion exportieren, die ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) mit ähnlichen Eigenschaften wie die globale `Astro`-Variable entgegennimmt.
+## Server-Endpunkte (API-Routen)
 
-Aber wenn der `server`-Modus konfiguriert ist werden die Daten zusammengestellt, wenn sie angefragt werden, anders als im `static`-Modus. Das ermöglicht Zugriff ein paar neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind. Diese erlauben es dir, API-Routen zu erstellen, die auf Anfragen warten und Code in einer sicheren Server-Umgebung ausführen, wenn der Server läuft.
+Alles, was bei den Endpunkten für statische Dateien beschrieben wurde, kann auch im SSR-Modus verwendet werden: Dateien können eine `get`-Funktion exportieren, die ein [Context-Objekt](/de/reference/api-reference/#endpoint-context) mit ähnlichen Eigenschaften wie die globale `Astro`-Variable entgegennimmt.
+
+Im Gegensatz zum `static`-Modus werden allerdings im `server`-Modus deine Endpunkte erst dann erzeugt, wenn eine Anfrage für sie empfangen wird. Dies ermöglicht den Zugriff auf neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind, und erlaubt es dir, API-Routen zu erstellen, die auf Anfragen warten und ihren Code zur Laufzeit in einer sicheren Server-Umgebung ausführen.
 
 :::note
-Stell sicher, dass du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project) bevor du diese Beispiele ausprobierst.
+Stelle sicher, dass du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project), bevor du diese Beispiele ausprobierst.
 :::
 
-Server-Endpunkte könenn auf `params` zugreifen ohne `getStaticPaths` zu exportieren und sie können ein [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response)-Objekt zurückgeben, was es ermöglicht, Status codes und Header zu setzen.
-
+Server-Endpunkte können auf `params` zugreifen, ohne `getStaticPaths` zu exportieren, und sie können ein [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response)-Objekt zurückgeben, welches dir ermöglicht, Statuscodes und Header zu setzen:
 
 ```js title="src/pages/[id].json.js"
 import { getProduct } from '../db';
@@ -130,16 +129,16 @@ export async function get({ params }) {
 }
 ```
 
-Das wird jede Anfrage beantworten, der die dynamische Route matcht. Wenn wir zum Beispiel zu `/helmet.json` navigieren, wird `params.id` den Wert `helmet` haben. Wenn in der Produktdatenbank `helmet` existiert, wird der der Endpunkt ein `Response`-Objekt erzeugen um mit JSON und einem erfolgreichen [HTTP status code](https://developer.mozilla.org/en-US/docs/Web/API/Response/status) antworten. Anderenfalls wird ein `Response`-Objekt genutzt, um mit einem `404` zu antworten.
+Diese Funktion wird jede Anfrage beantworten, deren Adresse zur dynamischen Route passt. Wenn wir zum Beispiel zu `/helmet.json` navigieren, wird `params.id` den Wert `helmet` haben. Wenn in der Produktdatenbank `helmet` existiert, wird der Endpunkt ein `Response`-Objekt erzeugen, um mit JSON und einem erfolgreichen [HTTP-Statuscode](https://developer.mozilla.org/en-US/docs/Web/API/Response/status) zu antworten. Ansonsten wird ein anderes `Response`-Objekt erzeugt, um mit einem `404`-Fehler zu antworten.
 
 ### HTTP-Methoden
 
-Zusätzlich zu der `get`-Funktion kannst du Funktionen mit den Namen aller möglichen [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn eine Anfrage ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
+Zusätzlich zur `get`-Funktion kannst du Funktionen mit den Namen aller möglichen [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn eine Anfrage ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
 
-Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Wenn eine Anfrage ohne passende Methode ankommt, wird man zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) weitergeleitet.
+Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Falls eine Anfrage eintrifft, die zu keiner exportierten Methode passt, wird diese mit einer Weiterleitung zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) beantwortet.
 
 :::note
-Da `delete` in JavaScript ein reserviertes Wort ist, exportiere eine `del`-Funktion um die `delete`-Methode abzubilden.
+Da `delete` in JavaScript ein reserviertes Wort ist, exportiere eine `del`-Funktion, um die `delete`-Methode abzubilden.
 :::
 
 ```ts title="src/pages/methods.json.ts"
@@ -197,7 +196,7 @@ export const post: APIRoute = async ({ request }) => {
 
 ### Umleitungen
 
-Der Endpunkt-Kontext exportiert einen `redirect`-Helfer, ähnlich wie `Astro.redirect`:
+Der Endpunkt-Kontext exportiert eine `redirect()`-Hilfsfunktion, ähnlich wie `Astro.redirect`:
 
 ```js title="src/pages/links/[id].js" {14}
 import { getLinkUrl } from '../db';
@@ -217,10 +216,9 @@ export async function get({ params, redirect }) {
 }
 ```
 
-
 ### Beispiel: Ein Captcha verifizieren
 
-Server-Endpunkte können als REST API Endpunkte genutzt werden um Funktionen wie Authentisierung, Datenbankzugriffe oder Verifizierungen durchzuführen, ohne sensible Informationen an den Client zu übermitteln.
+Server-Endpunkte können als REST-API-Endpunkte genutzt werden, um Funktionen wie Authentisierung, Datenbankzugriffe oder Verifizierungen durchzuführen, ohne sensible Informationen an den Client zu übermitteln.
 
 Im Beispiel unten wird eine API-Route genutzt, um ein Google reCAPTCHA v3 zu verifizieren, ohne das Kennwort an Clients herauszugeben.
 
@@ -247,8 +245,7 @@ export async function post({ request }) {
 }
 ```
 
-Damit können wir unseren Endpunkt mittels `fetch` im Client abrufen:
-
+Danach können wir unseren Endpunkt mittels `fetch` aus einem Client-Skript heraus aufrufen:
 
 ```astro title="src/pages/index.astro"
 <html>
