--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -12,7 +12,7 @@ Auf statisch generierten Websites werden projektspezifische Endpunkte zum Erstel
 
 Um einen Endpunkt zu erstellen, füge eine Datei mit der Endung `.js` oder `.ts` dem `/pages`-Verzeichnis hinzu. Da die Erweiterung `.js` oder `.ts` während des Erstellungsprozesses entfernt wird, sollte der Dateiname zusätzlich eine Dateiendung enthalten, die zum Format der ausgegebenen Daten passt. So erzeugt z.B. die Datei `src/pages/data.json.ts` den Endpunkt `/data.json`.
 
-Endpunkte exportieren eine `get`-Funktion (optional `async`), welche ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt, dessen Inhalte ähnlich zur globalen `Astro`-Variable sind. Ihr Rückgabewert ist ein Objekt mit einer `body`-Eigenschaft. Astro ruft diese Funktion zum Erstellungszeitpunkt auf und verwendet den Inhalt der `body`-Eigenschaft, um die Ausgabedatei zu erzeugen.
+Endpunkte exportieren eine `get`-Funktion (optional `async`), welche ein [Context-Objekt](/de/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt, dessen Inhalte ähnlich zur globalen `Astro`-Variable sind. Ihr Rückgabewert ist ein Objekt mit einer `body`-Eigenschaft. Astro ruft diese Funktion zum Erstellungszeitpunkt auf und verwendet den Inhalt der `body`-Eigenschaft, um die Ausgabedatei zu erzeugen.
 
 ```ts
 // Beispiel: src/pages/builtwith.json.ts
@@ -51,7 +51,7 @@ export const get: APIRoute = async function get ({params, request}) {
 
 ## `params` und dynamische Routen
 
-Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne dazu deine Datei mit einem Parameternamen, der in eckige Klammern eingeschlossen ist, und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
+Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamische-routen) wie Seiten. Benenne dazu deine Datei mit einem Parameternamen, der in eckige Klammern eingeschlossen ist, und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/de/reference/api-reference/#getstaticpaths). Dann kannst du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
 
 ```ts title="src/pages/[id].json.ts"
 import type { APIRoute } from 'astro';
@@ -101,7 +101,7 @@ Alles, was bei den Endpunkten für statische Dateien beschrieben wurde, kann auc
 Im Gegensatz zum `static`-Modus werden allerdings im `server`-Modus deine Endpunkte erst dann erzeugt, wenn eine Anfrage für sie empfangen wird. Dies ermöglicht den Zugriff auf neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind, und erlaubt es dir, API-Routen zu erstellen, die auf Anfragen warten und ihren Code zur Laufzeit in einer sicheren Server-Umgebung ausführen.
 
 :::note
-Stelle sicher, dass du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project), bevor du diese Beispiele ausprobierst.
+Stelle sicher, dass du [SSR aktivierst](/de/guides/server-side-rendering/#ssr-in-deinem-projekt-aktivieren), bevor du diese Beispiele ausprobierst.
 :::
 
 Server-Endpunkte können auf `params` zugreifen, ohne `getStaticPaths` zu exportieren, und sie können ein [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response)-Objekt zurückgeben, welches dir ermöglicht, Statuscodes und Header zu setzen:
@@ -135,7 +135,7 @@ Diese Funktion wird jede Anfrage beantworten, deren Adresse zur dynamischen Rout
 
 Zusätzlich zur `get`-Funktion kannst du Funktionen mit den Namen aller möglichen [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn eine Anfrage ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
 
-Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Falls eine Anfrage eintrifft, die zu keiner exportierten Methode passt, wird diese mit einer Weiterleitung zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) beantwortet.
+Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Falls eine Anfrage eintrifft, die zu keiner exportierten Methode passt, wird diese mit einer Weiterleitung zur [404-Seite](/de/core-concepts/astro-pages/#benutzerdefinierte-404-fehlerseite) beantwortet.
 
 :::note
 Da `delete` in JavaScript ein reserviertes Wort ist, exportiere eine `del`-Funktion, um die `delete`-Methode abzubilden.
