--- a/src/pages/zh-cn/guides/client-side-scripts.mdx
+++ b/src/pages/zh-cn/guides/client-side-scripts.mdx
@@ -109,7 +109,7 @@ Astro 将按照其[脚本捆绑规则](#脚本捆绑)为您构建、优化并将
 ```
 
 :::note
-如果您在一个页面上有多个 `<AlertButton />` 组件，Astro 将不会多次运行该脚本。 脚本是捆绑在一起的，每页只包含一次。 使用 querySelectorAll 确保此脚本将事件侦听器附加到页面上找到的具有 alert 类的每个按钮。
+如果您在一个页面上有多个 `<AlertButton />` 组件，Astro 将不会多次运行该脚本。 脚本是捆绑在一起的，每页只包含一次。 使用 `querySelectorAll` 确保此脚本将事件侦听器附加到页面上找到的具有 `alert` 类的每个按钮。
 :::
 
 ### 具有自定义元素的 Web 组件
