Add missing file name part
Adding `?url` to the file name imported at line 44 and 19, like it is at line 15.

--- a/src/pages/es/guides/aliases.mdx
+++ b/src/pages/es/guides/aliases.mdx
@@ -16,7 +16,7 @@ import logoUrl from '../../assets/logo.png?url';
 ---
 ```
 
-En este ejemplo, un desarrollador necesitaría comprender la relación de archivos entre `src/pages/about/company.astro`, `src/components/controls/Button.astro` y `src/assets/logo.png`. Y luego, si se moviera el archivo `company.astro`, estas importaciones también tendrían que actualizarse.
+En este ejemplo, un desarrollador necesitaría comprender la relación de archivos entre `src/pages/about/company.astro`, `src/components/controls/Button.astro` y `src/assets/logo.png?url`. Y luego, si se moviera el archivo `company.astro`, estas importaciones también tendrían que actualizarse.
 
 Puedes agregar alias de importación desde `tsconfig.json` o `jsconfig.json`.
 
@@ -41,7 +41,7 @@ Con este cambio, ahora puedes importar usando los alias desde cualquier parte de
 ```astro title="src/pages/about/company.astro" ins="@components" ins="@assets"
 ---
 import Button from '@components/Button';
-import logoUrl from '@assets/logo.png';
+import logoUrl from '@assets/logo.png?url';
 ---
 ```
 
