Consistent installation title

--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install Astro with the Automatic CLI
+title: Installation (Automatic CLI)
 description: 'How to install Astro with NPM, PNPM, or Yarn via the create-astro CLI tool.'
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
