ci: update reference docs

--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -489,7 +489,8 @@ import rehypeMinifyHtml from 'rehype-minify';
 <p>
 
 **Type:** `boolean`<br />
-**Default:** `true`
+**Default:** `true`<br />
+<Since v="2.0.0" />
 </p>
 
 Astro uses [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) by default. To disable this, set the `gfm` flag to `false`:
@@ -498,6 +499,26 @@ Astro uses [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) by
 {
   markdown: {
     gfm: false,
+  }
+}
+```
+
+
+### markdown.smartypants
+
+<p>
+
+**Type:** `boolean`<br />
+**Default:** `true`<br />
+<Since v="2.0.0" />
+</p>
+
+Astro uses the [SmartyPants formatter](https://daringfireball.net/projects/smartypants/) by default. To disable this, set the `smartypants` flag to `false`:
+
+```js
+{
+  markdown: {
+    smartypants: false,
   }
 }
 ```
