Update `markdown-content.mdx` translation

--- a/src/pages/pt-br/guides/markdown-content.mdx
+++ b/src/pages/pt-br/guides/markdown-content.mdx
@@ -422,7 +422,7 @@ Componentes customizados definidos e exportados em um arquivo MDX precisam ser i
 
 O suporte para Markdown no Astro é fornecido pelo [remark](https://remark.js.org/), uma poderosa ferramenta de processamento e parsing com um ecossistema ativo. Outros parsers de Markdown como Pandoc e markdown-it não são suportados atualmente.
 
-Astro aplica o plugin [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) por padrão. Ele trás algumas coisas legais como gerar links clicáveis a partir de texto.
+Astro aplica os plugins [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) e [SmartyPants](https://github.com/silvenon/remark-smartypants) por padrão. Ele trás algumas coisas legais como gerar links clicáveis a partir de texto e formatação para [citações e travessões](https://daringfireball.net/projects/smartypants/).
 
 Você pode personalizar como o remark faz parse do seu Markdown em `astro.config.mjs`. Veja a lista completa de [opções de configuração do Markdown](/pt-br/reference/configuration-reference/#opções-de-markdown).
 
